{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 145,
  "lineage": "73aa3cd4-b512-0249-5c0f-5b5a6d7562eb",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:security-group/sg-0ead8b549c1d2440a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ead8b549c1d2440a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from specific cidr_block range",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "novinho-labs-dev-eks-novinho-sg",
            "name_prefix": "",
            "owner_id": "770831555164",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eks-novinho-sg"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eks-novinho-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route.nat_access",
            "module.network.aws_route.public_internet_access",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_route_table.nat",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS from specific cidr_block range",
            "from_port": 443,
            "id": "sgrule-3325289645",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ead8b549c1d2440a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route.nat_access",
            "module.network.aws_route.public_internet_access",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_route_table.nat",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092feb6bdb64a0a4d",
            "association_id": "eipassoc-0444c01d3871c5d6e",
            "domain": "vpc",
            "id": "eipalloc-092feb6bdb64a0a4d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-048fbf788746cb27a",
            "private_dns": "ip-10-0-6-253.ec2.internal",
            "private_ip": "10.0.6.253",
            "public_dns": "ec2-3-228-243-188.compute-1.amazonaws.com",
            "public_ip": "3.228.243.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eip"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f03e7c4181f05d7",
            "association_id": "eipassoc-0acdd3ca959132498",
            "domain": "vpc",
            "id": "eipalloc-04f03e7c4181f05d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07244910c3c0059d5",
            "private_dns": "ip-10-0-31-14.ec2.internal",
            "private_ip": "10.0.31.14",
            "public_dns": "ec2-44-208-192-219.compute-1.amazonaws.com",
            "public_ip": "44.208.192.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eip"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:internet-gateway/igw-07901bca9ef724a2b",
            "id": "igw-07901bca9ef724a2b",
            "owner_id": "770831555164",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-internet-gw"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-internet-gw"
            },
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092feb6bdb64a0a4d",
            "connectivity_type": "public",
            "id": "nat-086115b496c8b25c1",
            "network_interface_id": "eni-048fbf788746cb27a",
            "private_ip": "10.0.6.253",
            "public_ip": "3.228.243.188",
            "subnet_id": "subnet-0c6f932e390011761",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-nat-gw"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-nat-gw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f03e7c4181f05d7",
            "connectivity_type": "public",
            "id": "nat-0d5d48b2e8c13fd67",
            "network_interface_id": "eni-07244910c3c0059d5",
            "private_ip": "10.0.31.14",
            "public_ip": "44.208.192.219",
            "subnet_id": "subnet-0d7954352c3b6c6e5",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-nat-gw"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-nat-gw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004e1f11cbb6a4c561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086115b496c8b25c1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004e1f11cbb6a4c56",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0573ff6917f71b30a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d5d48b2e8c13fd67",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0573ff6917f71b30a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07901bca9ef724a2b",
            "id": "r-rtb-092d99d4e42b5995b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092d99d4e42b5995b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07901bca9ef724a2b",
            "id": "r-rtb-070b7389af85de8d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070b7389af85de8d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:route-table/rtb-092d99d4e42b5995b",
            "id": "rtb-092d99d4e42b5995b",
            "owner_id": "770831555164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07901bca9ef724a2b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-public-rt"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:route-table/rtb-070b7389af85de8d3",
            "id": "rtb-070b7389af85de8d3",
            "owner_id": "770831555164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07901bca9ef724a2b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-public-rt"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:route-table/rtb-004e1f11cbb6a4c56",
            "id": "rtb-004e1f11cbb6a4c56",
            "owner_id": "770831555164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086115b496c8b25c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-private-rt"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:route-table/rtb-0573ff6917f71b30a",
            "id": "rtb-0573ff6917f71b30a",
            "owner_id": "770831555164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5d48b2e8c13fd67",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-private-rt"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f85fd4a57faae020",
            "route_table_id": "rtb-004e1f11cbb6a4c56",
            "subnet_id": "subnet-069371a4e20369ded"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e52d0473be4df5",
            "route_table_id": "rtb-0573ff6917f71b30a",
            "subnet_id": "subnet-07324f391d60efe37"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf28da7eeccd403f",
            "route_table_id": "rtb-092d99d4e42b5995b",
            "subnet_id": "subnet-0c6f932e390011761"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b623b6cae9f18205",
            "route_table_id": "rtb-070b7389af85de8d3",
            "subnet_id": "subnet-0d7954352c3b6c6e5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:subnet/subnet-069371a4e20369ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069371a4e20369ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770831555164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-priv-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-priv-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:subnet/subnet-07324f391d60efe37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07324f391d60efe37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "770831555164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-priv-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-priv-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:subnet/subnet-0c6f932e390011761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6f932e390011761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770831555164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-pub-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-pub-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:subnet/subnet-0d7954352c3b6c6e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7954352c3b6c6e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770831555164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-pub-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-pub-subnet",
              "kubernetes.io/cluster/novinho-labs-dev-eks-novinho": "shared"
            },
            "vpc_id": "vpc-0b42cb812296b0cfa"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770831555164:vpc/vpc-0b42cb812296b0cfa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088aad095bcffd819",
            "default_route_table_id": "rtb-0f5ce4d2afbee9032",
            "default_security_group_id": "sg-020c803315602dd0c",
            "dhcp_options_id": "dopt-b08d5ec9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b42cb812296b0cfa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5ce4d2afbee9032",
            "owner_id": "770831555164",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-vpc"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "novinho-labs-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}